# linkin_mark

./: .gitignore  .python-version  README.md  files.py  pyproject.toml
linkin_mark/: __init__.py  lib.py  viz.py
src/linkin_mark/: __init__.py  lib.py
test/: test_lib.py
test/test_data/: index.md  linkedto1.md
test/test_data/subdir/: linkedto2.md
